bg-img and overlay color practice

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-2xl text-sky-600">Learning Tailwind</h1>
+    <h1 class="text-2xl text-sky-600 bg-violet-200 my-10">Learning Tailwind</h1>
+    <h1 class="text-center text-purple-700 text-3xl my-10">background image</h1>
+    <div class="bg-[url('images/bg-image.png')] bg-blend-overlay bg-black/50  bg-no-repeat bg-cover bg-center w-full p-48">
+        <h1 class="text-5xl text-center text-white font-semibold my-5">This is a heading </h1>
+        <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, dolorem fuga! Voluptatibus ex numquam totam eos! Fugiat, dolores eligendi accusamus, assumenda, pariatur similique quisquam corporis maiores sapiente excepturi adipisci nostrum?</p>
+    </div>
+
 </body>
 </html>
