--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
         <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, dolorem fuga! Voluptatibus ex numquam totam eos! Fugiat, dolores eligendi accusamus, assumenda, pariatur similique quisquam corporis maiores sapiente excepturi adipisci nostrum?</p>
     </div>
 
+    <!-- container -->
+    <div class="container mx-auto py-5 bg-lime-800 my-20">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium perspiciatis, ratione repellat fugit, incidunt totam excepturi molestias culpa eum pariatur ut amet ab nemo sed earum quam voluptatum, libero officiis.</p>
+    </div>
+    <div class="container max-w-7xl mx-auto py-20 my-20 bg-purple-500">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quas consequatur corrupti tempora ipsam, soluta laboriosam libero modi! Natus nesciunt laborum doloribus odio incidunt impedit deserunt libero quod porro quasi?</p>
+    </div>
 </body>
 </html>
