--- a/daisy-ui.html
+++ b/daisy-ui.html
@@ -13,8 +13,10 @@
     <h1 class="text-3xl text text-center my-10 text-purple-800 font-bold">practiceing Daisy Ui</h1>
     <!-- modal -->
     <!-- Open the modal using ID.showModal() method -->
-    <button class="btn" onclick="my_modal_1.showModal()">open modal</button>
-    <dialog id="my_modal_1" class="modal">
+    <div class="flex justify-center">
+        <button class="btn bg-emerald-900 text-white" onclick="my_modal_1.showModal()">open modal</button>
+    </div>
+    <dialog id="my_modal_1" class="modal ">
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                 <div class="card-body">
